# french-dependency-parser

./: .gitignore  Makefile  README.md  blank_tokenizer.py  config.cfg  dev.conllu  download.sh  du_de_le.py  get_data.sh  list-labels.sh  lookup.txt  lookup_labels.txt  pyproject.toml  release.sh  space_tokenizer.py  splittokens.py  test.conllu  train.conllu  train.sh
scripts/: get_data.sh  list-labels.sh  matcher.py  remove_underscore.py  replace_remove_labels.py  space_tokenizer.py
